Changelog for plone.locking

    (name of developer listed in brackets)

plone.locking - 1.0.6

- Specify package dependencies.
  [hannosch]

- Fix missing internationnalization (#8609 thanks to Vincent Fretin)
  [encolpe]

plone.locking - 1.0.5

- Fix lock timeout which was set by default to 12 minutes, it is
  now set to maxtimeout (71582788 minutes).
  Fixes http://dev.plone.org/plone/ticket/7358
  [jfroche]

- Fix TypeError when an anonymous user locks content.  Fixes
  http://dev.plone.org/plone/ticket/7246
  [maurits]
